src/.antlr/HallelujahLangParser.java
// Generated from /home/me/2.study/faculdade/hallelujahLang/src/HallelujahLang.g4 by ANTLR 4.13.1
 
	import java.util.Map;
	import java.util.HashMap;
	import java.util.List;
	import java.util.ArrayList;
	import com.mylanguage.simple.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HallelujahLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, EXTENDS=2, IMPLEMENTS=3, INTERFACE=4, METHOD=5, NEW=6, PACKAGE=7, 
		CONSTRUCTOR=8, IMPORT=9, THIS=10, INPUT=11, PRINT=12, RETURN=13, WHILE=14, 
		IF=15, ELSE=16, ELSEIF=17, BOOLEAN=18, BOOL_TRUE=19, BOOL_FALSE=20, FLOAT=21, 
		INT=22, STRING=23, VOID=24, NULL=25, ASSIGN=26, DIVIDE=27, MINUS=28, MULTIPLY=29, 
		PLUS=30, EQUALS=31, GREATER_EQUAL=32, GREATER_THAN=33, LESS_EQUAL=34, 
		LESS_THAN=35, NOT_EQUALS=36, AND=37, NOT=38, OR=39, COMMA=40, DOT=41, 
		SEMICOLON=42, LBRACE=43, RBRACE=44, LPAREN=45, RPAREN=46, LBRACKET=47, 
		RBRACKET=48, LINE_COMMENT=49, MULTILINE_COMMENT=50, BOOL_CONST=51, FLOAT_CONST=52, 
		ID=53, INT_CONST=54, STRING_CONST=55, WS=56;
	public static final int
		RULE_program = 0, RULE_package_declaration = 1, RULE_package_import = 2, 
		RULE_class_declaration = 3, RULE_class_body = 4, RULE_class_instance = 5, 
		RULE_variable_declaration = 6, RULE_variable_assignment = 7, RULE_variable_reference = 8, 
		RULE_variable_statement = 9, RULE_parameters = 10, RULE_parameter = 11, 
		RULE_block = 12, RULE_statement = 13, RULE_assignment_statement = 14, 
		RULE_if_statement = 15, RULE_elseif_statement = 16, RULE_while_statement = 17, 
		RULE_return_statement = 18, RULE_method_declaration = 19, RULE_method_call = 20, 
		RULE_method_call_class = 21, RULE_method_call_this_class = 22, RULE_print = 23, 
		RULE_print_statement = 24, RULE_input_statement = 25, RULE_interface_declaration = 26, 
		RULE_interface_body = 27, RULE_arguments = 28, RULE_array_initializer = 29, 
		RULE_array_access = 30, RULE_array_declaration = 31, RULE_constructor_declaration = 32, 
		RULE_constructor_fields_declaration = 33, RULE_constructor_body = 34, 
		RULE_binary_operator = 35, RULE_aritmetical_operators = 36, RULE_aritmetical_expression = 37, 
		RULE_comparation_operators = 38, RULE_expression = 39, RULE_binary_operation = 40, 
		RULE_operand = 41, RULE_logical_not_expression = 42, RULE_callings = 43, 
		RULE_value = 44, RULE_data_type = 45, RULE_comment = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "package_declaration", "package_import", "class_declaration", 
			"class_body", "class_instance", "variable_declaration", "variable_assignment", 
			"variable_reference", "variable_statement", "parameters", "parameter", 
			"block", "statement", "assignment_statement", "if_statement", "elseif_statement", 
			"while_statement", "return_statement", "method_declaration", "method_call", 
			"method_call_class", "method_call_this_class", "print", "print_statement", 
			"input_statement", "interface_declaration", "interface_body", "arguments", 
			"array_initializer", "array_access", "array_declaration", "constructor_declaration", 
			"constructor_fields_declaration", "constructor_body", "binary_operator", 
			"aritmetical_operators", "aritmetical_expression", "comparation_operators", 
			"expression", "binary_operation", "operand", "logical_not_expression", 
			"callings", "value", "data_type", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'igreja'", "'estende'", "'implementa'", "'feFaz'", "'obraDoSenhor'", 
			"'nova'", "'alma'", "'fundacao'", "'arrebatandoDa'", "'nestaIgreja'", 
			"'responda'", "'pregue'", "'amem'", "'enquantoDeusQuiser'", "'seDeusQuiser'", 
			"'seDeusNaoQuiserEntao'", "'seDeusNaoQuiserTente'", "'consciencia'", 
			"'anjo'", "'demonio'", "'asas'", "'pes'", "'gloria'", "'qualquer'", "'limbo'", 
			"'='", "'/'", "'-'", "'*'", "'+'", "'=='", "'>='", "'>'", "'<='", "'<'", 
			"'!='", "'&&'", "'!'", "'||'", "','", "'.'", "';'", "'{'", "'}'", "'('", 
			"')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "EXTENDS", "IMPLEMENTS", "INTERFACE", "METHOD", "NEW", 
			"PACKAGE", "CONSTRUCTOR", "IMPORT", "THIS", "INPUT", "PRINT", "RETURN", 
			"WHILE", "IF", "ELSE", "ELSEIF", "BOOLEAN", "BOOL_TRUE", "BOOL_FALSE", 
			"FLOAT", "INT", "STRING", "VOID", "NULL", "ASSIGN", "DIVIDE", "MINUS", 
			"MULTIPLY", "PLUS", "EQUALS", "GREATER_EQUAL", "GREATER_THAN", "LESS_EQUAL", 
			"LESS_THAN", "NOT_EQUALS", "AND", "NOT", "OR", "COMMA", "DOT", "SEMICOLON", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LINE_COMMENT", 
			"MULTILINE_COMMENT", "BOOL_CONST", "FLOAT_CONST", "ID", "INT_CONST", 
			"STRING_CONST", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HallelujahLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, Object> symbolTable = new HashMap<String, Object>();

	public HallelujahLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HallelujahLangParser.EOF, 0); }
		public Package_declarationContext package_declaration() {
			return getRuleContext(Package_declarationContext.class,0);
		}
		public List<Class_declarationContext> class_declaration() {
			return getRuleContexts(Class_declarationContext.class);
		}
		public Class_declarationContext class_declaration(int i) {
			return getRuleContext(Class_declarationContext.class,i);
		}
		public List<Interface_declarationContext> interface_declaration() {
			return getRuleContexts(Interface_declarationContext.class);
		}
		public Interface_declarationContext interface_declaration(int i) {
			return getRuleContext(Interface_declarationContext.class,i);
		}
		public List<Package_importContext> package_import() {
			return getRuleContexts(Package_importContext.class);
		}
		public Package_importContext package_import(int i) {
			return getRuleContext(Package_importContext.class,i);
		}
		public List<TerminalNode> LINE_COMMENT() { return getTokens(HallelujahLangParser.LINE_COMMENT); }
		public TerminalNode LINE_COMMENT(int i) {
			return getToken(HallelujahLangParser.LINE_COMMENT, i);
		}
		public List<TerminalNode> MULTILINE_COMMENT() { return getTokens(HallelujahLangParser.MULTILINE_COMMENT); }
		public TerminalNode MULTILINE_COMMENT(int i) {
			return getToken(HallelujahLangParser.MULTILINE_COMMENT, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(94);
				package_declaration();
				}
			}

			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1688849860264466L) != 0)) {
				{
				setState(102);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CLASS:
					{
					setState(97);
					class_declaration();
					}
					break;
				case INTERFACE:
					{
					setState(98);
					interface_declaration();
					}
					break;
				case IMPORT:
					{
					setState(99);
					package_import();
					}
					break;
				case LINE_COMMENT:
					{
					setState(100);
					match(LINE_COMMENT);
					}
					break;
				case MULTILINE_COMMENT:
					{
					setState(101);
					match(MULTILINE_COMMENT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Package_declarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(HallelujahLangParser.PACKAGE, 0); }
		public TerminalNode ID() { return getToken(HallelujahLangParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(HallelujahLangParser.SEMICOLON, 0); }
		public Package_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_declaration; }
	}

	public final Package_declarationContext package_declaration() throws RecognitionException {
		Package_declarationContext _localctx = new Package_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_package_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(PACKAGE);
			setState(110);
			match(ID);
			setState(111);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Package_importContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(HallelujahLangParser.IMPORT, 0); }
		public List<TerminalNode> ID() { return getTokens(HallelujahLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HallelujahLangParser.ID, i);
		}
		public TerminalNode DOT() { return getToken(HallelujahLangParser.DOT, 0); }
		public TerminalNode SEMICOLON() { return getToken(HallelujahLangParser.SEMICOLON, 0); }
		public Package_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_import; }
	}

	public final Package_importContext package_import() throws RecognitionException {
		Package_importContext _localctx = new Package_importContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_package_import);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(IMPORT);
			setState(114);
			match(ID);
			setState(115);
			match(DOT);
			setState(116);
			match(ID);
			setState(117);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_declarationContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(HallelujahLangParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(HallelujahLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HallelujahLangParser.ID, i);
		}
		public TerminalNode LBRACE() { return getToken(HallelujahLangParser.LBRACE, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(HallelujahLangParser.RBRACE, 0); }
		public TerminalNode EXTENDS() { return getToken(HallelujahLangParser.EXTENDS, 0); }
		public TerminalNode IMPLEMENTS() { return getToken(HallelujahLangParser.IMPLEMENTS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(HallelujahLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HallelujahLangParser.COMMA, i);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(CLASS);
			setState(120);
			match(ID);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(121);
				match(EXTENDS);
				setState(122);
				match(ID);
				}
			}

			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(125);
				match(IMPLEMENTS);
				setState(126);
				match(ID);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(127);
					match(COMMA);
					setState(128);
					match(ID);
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(136);
			match(LBRACE);
			setState(137);
			class_body();
			setState(138);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_bodyContext extends ParserRuleContext {
		public ASTNode node;
		public If_statementContext if_statement;
		public While_statementContext while_statement;
		public Method_declarationContext method_declaration;
		public List<Variable_statementContext> variable_statement() {
			return getRuleContexts(Variable_statementContext.class);
		}
		public Variable_statementContext variable_statement(int i) {
			return getRuleContext(Variable_statementContext.class,i);
		}
		public List<Array_declarationContext> array_declaration() {
			return getRuleContexts(Array_declarationContext.class);
		}
		public Array_declarationContext array_declaration(int i) {
			return getRuleContext(Array_declarationContext.class,i);
		}
		public List<Print_statementContext> print_statement() {
			return getRuleContexts(Print_statementContext.class);
		}
		public Print_statementContext print_statement(int i) {
			return getRuleContext(Print_statementContext.class,i);
		}
		public List<Input_statementContext> input_statement() {
			return getRuleContexts(Input_statementContext.class);
		}
		public Input_statementContext input_statement(int i) {
			return getRuleContext(Input_statementContext.class,i);
		}
		public List<If_statementContext> if_statement() {
			return getRuleContexts(If_statementContext.class);
		}
		public If_statementContext if_statement(int i) {
			return getRuleContext(If_statementContext.class,i);
		}
		public List<While_statementContext> while_statement() {
			return getRuleContexts(While_statementContext.class);
		}
		public While_statementContext while_statement(int i) {
			return getRuleContext(While_statementContext.class,i);
		}
		public List<Class_instanceContext> class_instance() {
			return getRuleContexts(Class_instanceContext.class);
		}
		public Class_instanceContext class_instance(int i) {
			return getRuleContext(Class_instanceContext.class,i);
		}
		public List<Method_declarationContext> method_declaration() {
			return getRuleContexts(Method_declarationContext.class);
		}
		public Method_declarationContext method_declaration(int i) {
			return getRuleContext(Method_declarationContext.class,i);
		}
		public List<Method_call_classContext> method_call_class() {
			return getRuleContexts(Method_call_classContext.class);
		}
		public Method_call_classContext method_call_class(int i) {
			return getRuleContext(Method_call_classContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(HallelujahLangParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(HallelujahLangParser.SEMICOLON, i);
		}
		public List<Method_call_this_classContext> method_call_this_class() {
			return getRuleContexts(Method_call_this_classContext.class);
		}
		public Method_call_this_classContext method_call_this_class(int i) {
			return getRuleContext(Method_call_this_classContext.class,i);
		}
		public List<Constructor_declarationContext> constructor_declaration() {
			return getRuleContexts(Constructor_declarationContext.class);
		}
		public Constructor_declarationContext constructor_declaration(int i) {
			return getRuleContext(Constructor_declarationContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 10696049146780928L) != 0)) {
				{
				setState(162);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(140);
					variable_statement();
					}
					break;
				case 2:
					{
					setState(141);
					array_declaration();
					}
					break;
				case 3:
					{
					setState(142);
					print_statement();
					}
					break;
				case 4:
					{
					setState(143);
					input_statement();
					}
					break;
				case 5:
					{
					setState(144);
					((Class_bodyContext)_localctx).if_statement = if_statement();
					((Class_bodyContext)_localctx).node =  ((Class_bodyContext)_localctx).if_statement.node;
					}
					break;
				case 6:
					{
					setState(147);
					((Class_bodyContext)_localctx).while_statement = while_statement();
					((Class_bodyContext)_localctx).node =  ((Class_bodyContext)_localctx).while_statement.node;
					}
					break;
				case 7:
					{
					setState(150);
					class_instance();
					}
					break;
				case 8:
					{
					setState(151);
					((Class_bodyContext)_localctx).method_declaration = method_declaration();
					((Class_bodyContext)_localctx).node =  ((Class_bodyContext)_localctx).method_declaration.node;
					}
					break;
				case 9:
					{
					setState(154);
					method_call_class();
					setState(155);
					match(SEMICOLON);
					}
					break;
				case 10:
					{
					setState(157);
					method_call_this_class();
					setState(158);
					match(SEMICOLON);
					}
					break;
				case 11:
					{
					setState(160);
					constructor_declaration();
					}
					break;
				case 12:
					{
					setState(161);
					comment();
					}
					break;
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
